# ez-optimize

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
docs/: examples.ipynb
src/ez_optimize/: __init__.py  basinhopping.py  constants.py  differential_evolution.py  direct.py  dual_annealing.py  minimize.py  optimization_problem.py  shgo.py  utilities.py
tests/: test_args_kwargs.py  test_differential_evolution.py  test_dual_annealing.py  test_global_methods.py  test_minimize.py  test_optimization_problem.py  test_optimization_problem_callback.py
