[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ez_optimize*"]

[project]
name = 'ez-optimize'
version = "0.1.0"
requires-python = ">=3.10"
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
description = "A more intuitive front-end for scipy.optimize with keyword params x0={'x': 1, 'y': 2} and more"
readme = "README.md"
license = {text = "MIT License"}
keywords = [
  "optimize", "optimizer", 
  "minimize", "minimizer", 
  "maximize", "maximizer", 
  "keyword", "keyword optimize", "keyword optimizer", 
  "keyword minimizer", "keyword maximizer",
  "scipy", "scipy optimize", 
  "scipy minimize", "scipy root",
  "quality of life"
]
classifiers =[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
  'numpy',
  'scipy>=1.15',
]



[project.optional-dependencies]
tests = [
  'pytest',
  'build',
  'twine'
]

[project.urls]
Homepage = "https://github.com/qthedoc/ez-optimize"
Repository = "https://github.com/qthedoc/ez-optimize"
Issues = "https://github.com/qthedoc/ez-optimize/issues"
"Say Thanks!" = "http://quinnmarsh.com"


