[build-system]
requires = ["setuptools >= 61", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ez_optimize*"]

[project]
name = 'ez-optimize'
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
description = "A more intuitive front-end for scipy.optimize with keyword params x0={'x': 1, 'y': 2} and more"
readme = "README.md"
license = {text = "MIT License"}
keywords = [
  "optimize", "optimizer", 
  "minimize", "minimizer", 
  "maximize", "maximizer", 
  "keyword", "keyword optimize", "keyword optimizer", 
  "keyword minimizer", "keyword maximizer",
  "scipy", "scipy optimize", 
  "scipy minimize", "scipy root",
  "quality of life"
]
classifiers =[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
  'numpy',
  'scipy>=1.15',
]

[project.optional-dependencies]
test = [
  'pytest',
]

[project.urls]
Homepage = "https://github.com/qthedoc/ez-optimize"
Repository = "https://github.com/qthedoc/ez-optimize"
Issues = "https://github.com/qthedoc/ez-optimize/issues"
"Say Thanks!" = "http://quinnmarsh.com"

[tool.setuptools_scm]
version_file = "src/ez_optimize/_version.py" # create version file on build and install
local_scheme = "no-local-version"

